# George

./: .dockerignore  .env.example  .gitignore  API_CLIENT_GENERATION.md  ASYNC_INGESTION_ARCHITECTURE.md  AUTHORIZATION_FIX_ADMIN_ACCESS.md  BACKEND_REQUIREMENTS.md  BETA_SECURITY_CHECKLIST.md  BRIDGE_TEST_LIVE.md  COST_TRACKING_IMPLEMENTATION_COMPLETE.md  COST_TRACKING_INTEGRATION_GUIDE.md  COST_TRACKING_QUICK_REFERENCE.md  COST_TRACKING_RACE_CONDITION_FIX.md  DEBUG_VERIFICATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  DISTRIBUTED_TRANSACTION_IMPLEMENTATION.md  DOCKER_DEV_GUIDE.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_VARIABLES.md  FEEDBACK_LOOP.md  FRONTEND_DEPLOYMENT.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SESSION_COMPLETE.md  INTERNAL_TOKEN_SECURITY_FIX.md  PRODUCTION_DEPLOYMENT.md  QUICK_REFERENCE.md  REACT_BUILD_COMPLETE.md  README.md  REGISTRATION_INTEGRATION_COMPLETE.md  REGISTRATION_RESILIENCE_FIX.md  RESILIENCE_VERIFICATION_COMPLETE.md  SAGA_PATTERN_INTEGRATION.md  SAGA_PATTERN_QUICK_REFERENCE.md  SAVE_AS_NOTE_FEATURE.md  SECURE_AUTH_GUIDE.md  SECURITY_FIX_IMPLEMENTATION_SUMMARY.md  SECURITY_FIX_X_USER_ID_HEADER.md  SERVICE_ARCHITECTURE.md  (+52 more)
.venv_new/: pyvenv.cfg
ai_router/: README.md  app.py  requirements.txt  test_app.py
auth_server/: Dockerfile  app.py  auth_manager.py  db_schema.py  pending_billing_queue.py  requirements.txt
backend/: .env  .env.example  Dockerfile.dev  app.py  cost_tracking.py  distributed_saga.py  error.txt  feedback_manager.py  gemini_client.py  ingestion_worker.py  job_manager.py  llm_client.py  output.txt  requirements.txt  service_utils.py  session_manager.py  test_flask.py
billing_server/: Dockerfile  app.py  billing_manager.py
chroma_server/: Dockerfile  app.py  db_manager.py  requirements.txt  test_app.py
docs/: KNOWLEDGE_EXTRACTION_SYSTEM.md  PROFILE_EDITING_GUIDE.md  architecture_blueprint.md  architecture_template.md  requirements_spec.md  ui_foundation_artifacts.md
examples/: comprehensive_pipeline_demo.py  knowledge_base_demo.py  text_processing_demo.py
external_data_server/: api_clients.py  app.py  requirements.txt
filesystem_server/: Dockerfile  app.py  requirements.txt  services.py  test_app.py
frontend/: .env.production  hello.html  index.html  package.json  (+2 more)
(+249 files in other folders)
